--- a/Teste.API/config.json
+++ b/Teste.API/config.json
@@ -1,3 +1,5 @@
 ﻿{
-
+  "ConnectionStrings": {
+    "ZZTest": "Server=dbfragata.cmcait8irl6a.us-east-2.rds.amazonaws.com,1433;Database=ZZTest;User Id=melchior;Password=Otiagoehfoda"
+  }
 }
