--- a/scr/ZZ_ERP.API/ZZ_ERP.API.csproj
+++ b/scr/ZZ_ERP.API/ZZ_ERP.API.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -12,6 +12,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ZZ_ERP.DataApplication\ZZ_ERP.DataApplication.csproj" />
+    <ProjectReference Include="..\ZZ_ERP.Infra.CrossCutting.Conections\ZZ_ERP.Infra.CrossCutting.Connections.csproj" />
+    <ProjectReference Include="..\ZZ_ERP.Infra.CrossCutting.DTO\ZZ_ERP.Infra.CrossCutting.DTO.csproj" />
   </ItemGroup>
 
 </Project>
